bug(scrollbar): fixed white gap between #main scrollbar and footer
#832800

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -158,7 +158,8 @@ header {
 
 
 #main{
-  height: calc(100% - 141px);
+  height: calc(100% - 136px);
+  padding-bottom:5px;
   overflow-y: auto;
   &::-webkit-scrollbar {
       width: 8px;
